@@ -298,4 +298,12 @@ def test_suite():
             unittest.defaultTestLoader.loadTestsFromName(
                 'zope.testrunner.test_subunit'))
 
+    if sys.version_info[:3] > (2,7,0):
+        # Python 2.7 adds support for unittest.expectedFailure
+        suites.append(doctest.DocFileSuite(
+            'testrunner-unexpected-success.txt',
+            setUp=setUp, tearDown=tearDown,
+            optionflags=doctest.ELLIPSIS+doctest.NORMALIZE_WHITESPACE,
+            checker=checker))
+
     return unittest.TestSuite(suites)
